--- a/manifest.json
+++ b/manifest.json
@@ -25,12 +25,8 @@
     "content_scripts": [
         {
             "matches": ["*://*.reddit.com/*"],
-            "js": ["jquery.min.js", "content.js"],
+            "js": ["content.js"],
             "run_at": "document_end"
         }
-    ],
-
-    "background": {
-        "scripts": ["background.js"]
-    }
+    ]
  }
