--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 { 
     "name": "Reddit Peacemaker",
-    "version": "0.1",
+    "version": "1",
+    "versionName": "boilerplate",
     "manifest_version": 2,
     "description": "Prevents you from engaging with the troglodytes on Reddit",
 
